range.c: Range#min with a beginless one now raise an explicit exception

[Bug #16450]